# n88util

./: CMakeLists.txt  README.md  n88utilConfig.cmake.in  n88utilConfigVersion.cmake.in  n88util_version.h.in
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
.github/workflows/: build-and-upload-conda-packages.yml  build-publish-anaconda.yml  cmake-multi-platform.yml  test-cmake-windows.yml
cmake/: ConfigureTests.cmake
cmake/configure_programs/: glibc_version.c
conda-recipe/n88util/: bld.bat  build.sh  conda_build_config.yaml  environment.yaml  environment.yml  meta.yaml
include/n88util/: ObjectGroup.hpp  TimeStamp.hpp  TrackingAllocator.hpp  array.hpp  arraymath.hpp  binhex.hpp  configuration.hpp  const_array.hpp  exception.hpp  floating_point_comparisons.hpp  logger.hpp  netcdf_templated.hpp  printarray.hpp  tuplet.hpp
source/: TrackingAllocator.cpp  binhex.cpp  text.cpp
tests/: CMakeLists.txt  arrayTests.cpp  binhexTests.cpp  const_arrayTests.cpp  textTests.cpp  tupletTests.cpp
